<resources>
    <string name="app_name">AssistGoAndroid</string>
    <string name="contact_list">Contact List</string>
    <string name="new_contact">New Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="add_new_contact">Add new Contact</string>
    <string name="verify_delete_contact">Are you sure you want to delete contact?</string>
    <string name="main_title" translatable="false">Main Title</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="change_number">Change Number</string>
    <string name="new_number">New Number</string>
    <string name="enter_new_phone_number">Enter New Phone Number</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="translate">Translate</string>
    <string name="emergency">&#032;&#032;&#032;&#032;&#032;&#032;Emergency</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="save_contact">Save Contact</string>
    <string name="cancel">Cancel</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="number">Number</string>
    <string name="our_story">our story goes here</string>
    <string name="call_history">Call History</string>
    <string name="ringing">Ringing...</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string-array name="settings_titles">
        <item>@string/profile</item>
        <item>@string/preferences</item>
        <item>@string/about</item>
    </string-array>
    <string-array name="preferences_switchers_titles">
        <item>@string/Allow_system_notifications</item>
    </string-array>
    <string-array name="emergency_titles">
        <item>@string/ambulance</item>
        <item>@string/police</item>
        <item>@string/firefighter</item>
    </string-array>
    <string name="enter_translate_hint">Enter Text</string>
    <string name="translation_output_hint">Translation</string>
    <string-array name="detected_language">
        <item>@string/Detected_language</item>
        <item>@string/Abkhazian</item>
        <item>@string/Afar</item>
        <item>@string/Afrikaans</item>
        <item>@string/Akan</item>
        <item>@string/Albanian</item>
        <item>@string/Amharic</item>
        <item>@string/Arabic</item>
        <item>@string/Aragonese</item>
        <item>@string/Armenian</item>
        <item>@string/Assamese</item>
        <item>@string/Avaric</item>
        <item>@string/Avestan</item>
        <item>@string/Aymara</item>
        <item>@string/Azerbaijani</item>
        <item>@string/Bambara</item>
        <item>@string/Bashkir</item>
        <item>@string/Basque</item>
        <item>@string/Belarusian</item>
        <item>@string/Bengali</item>
        <item>@string/Bislama</item>
        <item>@string/Bosnian</item>
        <item>@string/Breton</item>
        <item>@string/Bulgarian</item>
        <item>@string/Burmese</item>
        <item>@string/Catalan_Valencian</item>
        <item>@string/Chamorro</item>
        <item>@string/Chechen</item>
        <item>@string/Chichewa_Chewa_Nyanja</item>
        <item>@string/Chinese</item>
        <item>@string/Church_Slavic_</item>
        <item>@string/Chuvash</item>
        <item>@string/Cornish</item>
        <item>@string/Corsican</item>
        <item>@string/Cree</item>
        <item>@string/Croatian</item>
        <item>@string/Czech</item>
        <item>@string/Danish</item>
        <item>@string/Divehi_Dhivehi_Maldivian</item>
        <item>@string/Dutch_Flemish</item>
        <item>@string/Dzongkha</item>
        <item>@string/English</item>
        <item>@string/Esperanto</item>
        <item>@string/Estonian</item>
        <item>@string/Ewe</item>
        <item>@string/Faroese</item>
        <item>@string/Fijian</item>
        <item>@string/Finnish</item>
        <item>@string/French</item>
        <item>@string/Western_Frisian</item>
        <item>@string/Fulah</item>
        <item>@string/Gaelic_Scottish_Gaelic</item>
        <item>@string/Galician</item>
        <item>@string/Ganda</item>
        <item>@string/Georgian</item>
        <item>@string/German</item>
        <item>@string/Greek_Modern</item>
        <item>@string/Kalaallisut_Greenlandic</item>
        <item>@string/Guarani</item>
        <item>@string/Gujarati</item>
        <item>@string/Haitian_Haitian_Creole</item>
        <item>@string/Hausa</item>
        <item>@string/Hebrew</item>
        <item>@string/Herero</item>
        <item>@string/Hindi</item>
        <item>@string/Hiri_Motu</item>
        <item>@string/Hungarian</item>
        <item>@string/Icelandic</item>
        <item>@string/Ido</item>
        <item>@string/Igbo</item>
        <item>@string/Indonesian</item>
        <item>@string/Interlingua</item>
        <item>@string/Interlingue</item>
        <item>@string/Inuktitut</item>
        <item>@string/Inupiaq</item>
        <item>@string/Irish</item>
        <item>@string/Italian</item>
        <item>@string/Japanese</item>
        <item>@string/Javanese</item>
        <item>@string/Kannada</item>
        <item>@string/Kanuri</item>
        <item>@string/Kashmiri</item>
        <item>@string/Kazakh</item>
        <item>@string/Central_Khmer</item>
        <item>@string/Kikuyu_Gikuyu</item>
        <item>@string/Kinyarwanda</item>
        <item>@string/Kirghiz_Kyrgyz</item>
        <item>@string/Komi</item>
        <item>@string/Kongo</item>
        <item>@string/Korean</item>
        <item>@string/Kuanyama_Kwanyama</item>
        <item>@string/Kurdish</item>
        <item>@string/Lao</item>
        <item>@string/Latin</item>
        <item>@string/Latvian</item>
        <item>@string/Limburgan_Limburger_Limburgish</item>
        <item>@string/Lingala</item>
        <item>@string/Lithuanian</item>
        <item>@string/Luba_Katanga</item>
        <item>@string/Luxembourgish_Letzeburgesch</item>
        <item>@string/Macedonian</item>
        <item>@string/Malagasy</item>
        <item>@string/Malay</item>
        <item>@string/Malayalam</item>
        <item>@string/Maltese</item>
        <item>@string/Manx</item>
        <item>@string/Maori</item>
        <item>@string/Marathi</item>
        <item>@string/Marshallese</item>
        <item>@string/Mongolian</item>
        <item>@string/Nauru</item>
        <item>@string/Navajo_Navaho</item>
        <item>@string/North_Ndebele</item>
        <item>@string/South_Ndebele</item>
        <item>@string/Ndonga</item>
        <item>@string/Nepali</item>
        <item>@string/Norwegian</item>
        <item>@string/Norwegian_Bokmål</item>
        <item>@string/Northern_Sami</item>
        <item>@string/Sichuan_Yi_Nuosu</item>
        <item>@string/Occitan</item>
        <item>@string/Ojibwa</item>
        <item>@string/Oriya</item>
        <item>@string/Oromo</item>
        <item>@string/Occitan</item>
        <item>@string/Pali</item>
        <item>@string/Pashto_Pushto</item>
        <item>@string/Persian</item>
        <item>@string/Polish</item>
        <item>@string/Portuguese</item>
        <item>@string/Punjabi_Panjabi</item>
        <item>@string/Quechua</item>
        <item>@string/Romanian_Moldavian_Moldovan</item>
        <item>@string/Romansh</item>
        <item>@string/Rundi</item>
        <item>@string/Russian</item>
        <item>@string/Northern_Sami</item>
        <item>@string/Samoan</item>
        <item>@string/Sango</item>
        <item>@string/Sanskrit</item>
        <item>@string/Sardinian</item>
        <item>@string/Serbian</item>
        <item>@string/Shona</item>
        <item>@string/Sindhi</item>
        <item>@string/Sinhala_Sinhalese</item>
        <item>@string/Slovak</item>
        <item>@string/Slovenian</item>
        <item>@string/Somali</item>
        <item>@string/South_Ndebele</item>
        <item>@string/Spanish_Castilian</item>
        <item>@string/Sundanese</item>
        <item>@string/Swahili</item>
        <item>@string/Swati</item>
        <item>@string/Swedish</item>
        <item>@string/Tagalog</item>
        <item>@string/Tahitian</item>
        <item>@string/Tajik</item>
        <item>@string/Tamil</item>
        <item>@string/Tatar</item>
        <item>@string/Telugu</item>
        <item>@string/Thai</item>
        <item>@string/Tibetan</item>
        <item>@string/Tigrinya</item>
        <item>@string/Tonga</item>
        <item>@string/Tsonga</item>
        <item>@string/Tswana</item>
        <item>@string/Turkish</item>
        <item>@string/Turkmen</item>
        <item>@string/Twi</item>
        <item>@string/Uighur_Uyghur</item>
        <item>@string/Ukrainian</item>
        <item>@string/Urdu</item>
        <item>@string/Uzbek</item>
        <item>@string/Venda</item>
        <item>@string/Vietnamese</item>
        <item>@string/Volapük</item>
        <item>@string/Walloon</item>
        <item>@string/Welsh</item>
        <item>@string/Wolof</item>
        <item>@string/Xhosa</item>
        <item>@string/Yiddish</item>
        <item>@string/Yoruba</item>
        <item>@string/Zhuang_Chuang</item>
        <item>@string/Zulu</item>
    </string-array>
    <string name="scan_your_code">Scan Your Code</string>
    <string name="qr_image_lockedL">[</string>
    <string name="qr_image_lockedR">]</string>
    <string name="microphone">microphone</string>
</resources>