<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings.aboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="#99F5F0"
        android:text="@string/about"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="55sp"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="164dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="125dp"
        android:background="@drawable/assistgologo">

    </ImageView>

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:background="#99F5F0"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="55sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:text="@string/our_story"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        >

    </TextView>

    <ImageButton
        android:id="@+id/micbutton"
        android:layout_width="130dp"
        android:layout_height="125dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/mic_icon"
        android:contentDescription="@string/microphone">

    </ImageButton>


</RelativeLayout>