<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings.profileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="#99F5F0"
        android:text="@string/change_number"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="150dp"
        android:text="@string/new_number"
        android:textColor="#000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="315dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="239dp"
        android:ems="10"
        android:hint="@string/enter_new_phone_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/changeNumberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="328dp"
        android:text="@string/change_number" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationViewTranslate"
        android:layout_width="412dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="5dp"
        android:background="@color/app_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivMicButton"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/mic_icon" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</RelativeLayout>