<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494745">

    <TextView
        android:id="@+id/sqScanPageLabel"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginBottom="10dp"
        android:background="@color/app_color"
        android:padding="10dp"
        android:text="@string/new_contact"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/qrCodeExample"
        android:layout_width="129dp"
        android:layout_height="111dp"
        app:layout_constraintBottom_toBottomOf="@id/previewView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/scan_your_code_label"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/qr_image_foreground"
        app:tint="@color/white" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView_QR_SCAN_PAGE"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/app_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivMicButton"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/mic_icon" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/scan_your_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_your_code"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:translationZ="90dp"
        app:layout_constraintBottom_toTopOf="@id/previewView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sqScanPageLabel"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/qr_locked_yellow_outline"
        android:layout_width="match_parent"
        android:layout_height="487dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <TextView
            android:id="@+id/qr_image_lockedL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/qr_image_lockedL"
            android:textColor="#FFD700"
            android:textSize="375dp" />

        <Space
            android:layout_width="221dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/qr_image_lockedR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/qr_image_lockedR"
            android:textColor="#FFD700"
            android:textSize="375dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>